--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/background.jpg") top right no-repeat;
+  background: #040404 url("../img/back.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
